<resources>
    <string name="app_name">Lifelog Diary</string>
    <string name="title_home">Home</string>
    <string name="title_activitylog">ActivityLog</string>
    <string name="title_diary">Diary</string>
    <string name="home_setting">Home</string>
    <string name="notification_setting">notification</string>
    <string name="title_mypage">MyPage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_status">Status</string>
    <string name="home_comment">Need to finish up the first stage of this work.</string>
    <string name="home_mind">Mind</string>
    <string name="home_main_description">Now my Body is...</string>
    <string name="home_bodycondition">BodyCondition</string>
    <string name="home_mindcondition">MindCondition</string>
    <string name="title">STATUS</string>
    <string name="update_title">How\'s your condition?</string>

    <string name="secondary_text">Now my Body is...</string>
    <string name="supporting_text">This is the comment you write when you feel like doing it.</string>
    <string name="fab_update">update</string>
    <string name="fab_description">For update your status</string>
    <string name="dialog_title">How\'s your condition?</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">ok</string>
    <string name="dialog_fab">This is dialog for statu update</string>
    <string name="fab">for what it\'s worth</string>
    <string name="dialog_message">this is dialog message!!</string>
    <string name="hint_comment">Comment here</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_cancel">Cancel</string>
    <string name="status_section">status section</string>
    <string name="header_text">TEMPORARY_MONTH</string>
    <string name="text_lifelog_diaries">Your Lifelog Diaries</string>
    <string name="day_comment_title">How was your day?</string>
    <string name="botton_diary">Diary</string>
    <string name="text_how_was_your_day">How was your day?</string>
    <string name="text_test">Today is gonna be the day</string>
    <string name="title_worklog">Activity</string>
    <string name="button_revise">REVISE</string>
    <string name="button_submit_update">submit</string>
    <string name="button_update">UPDATE</string>
    <string name="lifelog_app_id">lifelogapp</string>
    <string name="lifelogapp">LifeLogApp</string>
    <string name="notification_channel_description">Lifelog reminder</string>
    <string name="timer_running">timer is running</string>
    <string name="notification_text">How\'s your condition?</string>
    <string name="header_daylogs">Recent Logs</string>
    <string name="header_history_detail">Logs in a Day</string>
    <string name="average_prompt">Check your condition averages</string>
    <string name="button_done">DONE</string>
    <string name="text_memo">-MEMO-</string>
    <string name="header_condition">Condition</string>
    <string name="text_average">-CONDITION-</string>
    <string name="button_delete">delete</string>

</resources>