<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="writeReviewViewModel"
            type="com.example.lifelogapp.ui.writereview.WriteReviewViewModel" />
    </data>
    <!--    <data>-->
    <!--        <variable-->
    <!--            name="myComment"-->
    <!--            type="com.example.lifelogapp.UtilKt" />-->
    <!--    </data>-->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_how_was_your_day"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">


                    <EditText
                        android:id="@+id/new_comment"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:elevation="40dp"
                        android:ems="10"
                        android:hint="@string/hint_comment"
                        android:inputType="textMultiLine|text"
                        android:singleLine="false"
                        android:textAlignment="viewStart"
                        android:text="@={writeReviewViewModel.editText}"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_submit"
                        android:layout_marginLeft="25dp"

                        android:onClick="@{() -> writeReviewViewModel.onSubmitClicked()}"
                        style="?attr/borderlessButtonStyle"
                        />

            </LinearLayout>
        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>
</layout>

